# FileLock-AI

./: README.md  filelock-policy.yaml  pyproject.toml
.github/actions/filelock-ai-check/: action.yml
.github/scripts/: emit_filelock_annotations.py
.github/workflows/: filelock-ai-pr-check.yml  filelock-ai-push-check.yml
examples/: diff.txt  plan.json
filelock_ai/: __init__.py  adapters.py  cli.py  codeowners.py  engine.py  linting.py  mcp_server.py  paths.py  policy.py  schema_validation.py  tag_packs.py
filelock_ai/policy_schema/: filelock-policy.schema.json
policy/: enterprise_backend.yaml  monorepo.yaml  startup_app.yaml
policy/schema/: filelock-policy.schema.json
tests/: test_adapters.py  test_cli.py  test_engine.py  test_mcp_server.py  test_policy.py  test_validators.py
validators/: __init__.py  diff_validator.py  plan_validator.py
